--- a/Schedule.html
+++ b/Schedule.html
@@ -43,6 +43,6 @@
 </body>
 <footer>
   <p>© Adriel Manamparan, 2025</p>
-  <a href="youtube.com">Youtube</a>
+  <a url="youtube.com">Youtube</a>
 </footer>
 </html>
