--- a/Schedule.html
+++ b/Schedule.html
@@ -43,6 +43,9 @@
 </body>
 <footer>
   <p>© Adriel Manamparan, 2025</p>
-  <a url="youtube.com">Youtube</a>
+  <a href="https://www.youtube.com">Adriel's Digital Garden</a><br>
+  <a href="https://www.youtube.com">Adriel's GitHub</a><br>
+  <pre><a href="https://www.youtube.com">Adriel's Facebook    </a><a href="https://www.youtube.com">Adriel's Instagram</a></pre>
+
 </footer>
 </html>
