--- a/2QCardBonus_Manamparan.html
+++ b/2QCardBonus_Manamparan.html
@@ -13,6 +13,7 @@
         font-family: 'Courier New', Courier, monospace;
         font-size: 1rem;
         font-weight: bold;
+        text-align: center;
     }
     body {
         display: flex;
