--- a/2QCardBonus_Manamparan.html
+++ b/2QCardBonus_Manamparan.html
@@ -13,7 +13,6 @@
         font-family: 'Courier New', Courier, monospace;
         font-size: 1rem;
         font-weight: bold;
-        text-align: center;
     }
     body {
         display: flex;
@@ -25,6 +24,10 @@
     #card:hover {
         background-color: #e0e0e0;
         box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+    }
+    p {
+        text-align: center;
+        margin: 5px 0;
     }
 </style>
 <body>
